
	* tag V05-03-02
	* Merge changes from V05-02-03 into branch_3_3_X

2009-10-13 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V05-03-01
	* Merge changes from V05-02-01 and V05-02-02 into branch_3_3_X

2009-09-25 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V05-03-00
	* Merge changes from V05-02-00 into branch_3_3_X
	* Fix a couple of issues for gcc4/amd64

2009-10-16 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V05-02-03
	* Fix sub-second sleep duration
	* Fix bug in filling the disk-space usages vector in the info space
	* Backport fixes for gcc4/amd64 from branch_3_3_X

2009-10-13 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V05-02-02
	* Remove default setting for sataUser. This disables the check for
	  the SATA controller.

2009-10-06 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V05-02-01
	* Send sentinel notifications via AlarmHandler instead of Notifier.
	* Send notifications rather than alarms for single occurrences, i.e.
	  for issues for which we do not need extended periods of visibility.
	* Do not send a SATA disk-controller alarm if the sataUser is not
	  configured.
	* Add stateName to application info space to allow run control to
	  display the current state after initialization.
	* Split large implementation file for I2OChain into separate files
	  for the internal ChainData classes.

2009-09-25 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V05-02-00
	* Accept EmergencyStop FSM SOAP message
	* Increased number of monitoring parameters exported to the info space.
	* Improved monitoring and add sentinel alarms for disks: status of SATA
	  beasts and configuration option to check other disks, e.g. the look-area
	  and ECAL calibration area.
	* Added sentinel alarms for number of copy/inject workers, as well as
	  for skipped discards and stale I2O chains
	* Expanded web pages for consumers and throughput statistics
	* Variable update intervals for monitoring collections
	* Expanded logging/alarming in case of rare problems